IstioSecurity.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: poc-peer-policy
  namespace: default
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-ingress
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "seamless"
    jwksUri: "https://gist.githubusercontent.com/NathBabs/518a7efadc18402a952a33009affba40/raw/052378a5064fc3a74cf188c7c629c48a612024ab/jwks.json"
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-default
  namespace: default
spec:
  jwtRules:
  - issuer: "seamless"
    jwksUri: "https://gist.githubusercontent.com/NathBabs/518a7efadc18402a952a33009affba40/raw/052378a5064fc3a74cf188c7c629c48a612024ab/jwks.json"
